# orca-cli

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml
adr/: index.html
adr/0001-lazy-command-registration/: index.html
adr/0002-dual-format-config-file/: index.html
adr/0003-auth-type-auto-detection/: index.html
adr/0004-no-services-layer/: index.html
adr/0005-durable-token-cache/: index.html
adr/0006-idempotent-only-retries/: index.html
adr/0007-incremental-services-layer/: index.html
adr/0008-command-naming-convention/: index.html
adr/0009-server-boot-mode-policy/: index.html
commands/: index.html
commands/access-rule/: index.html
commands/aggregate/: index.html
commands/alarm/: index.html
commands/application-credential/: index.html
commands/audit/: index.html
commands/auth/: index.html
commands/availability-zone/: index.html
commands/backup/: index.html
getting-started/: index.html
orca_cli/: __init__.py  main.py
reference/: index.html
search/: search_index.json
shark_cli/: __init__.py  main.py
tests/: conftest.py  test_alarm.py  test_cinder_admin.py  test_cli_registration.py  test_client.py  test_config.py  test_exceptions.py  test_image.py  test_naming_convention.py  test_neutron_admin.py  test_neutron_audit_lots_2_12.py  test_profile.py  test_project_cleanup.py  test_security_group.py  test_server.py  test_server_create_boot_mode.py  test_validators.py  test_wait_and_dryrun.py
(+115 files in other folders)
